Field privateKey was removed from model, because of its handy to have just key files with instance.
